# arc-agi-3-three-loop

./: .env.example  .gitignore  HANDOFF.md  LICENSE  README.md  REPRODUCIBILITY.md  pyproject.toml
config/: models.yaml
data/: memory.db
data/hypotheses/: 050647c8-6009-4d1b-9042-b84d3fc35f31_ft09.json  05115f7f-70d5-4e78-85f0-4ca94626beff_tr87.json  103c9041-db64-49a1-b75f-4cbf1f7bb086_ls20.json  11da5068-17bc-43c4-b511-1fd83ace704e_tr87.json  1b3df412-44c5-497b-ab9e-960f963084b3_wa30.json  1b608ae2-a337-4ab1-baaf-0dfc7d3af3c7_ls20.json  1fa8e4c5-9ce9-439f-947d-942bb3898088_r11l.json  25ea06e0-18ba-4075-b13e-837fc215b19a_ls20.json  2bd30d4f-ffb1-4b47-acb0-17b5032edafe_ls20.json  2dd69fd5-d424-4ec1-b58d-f9f59f49bbf1_r11l.json  38a6a028-ca50-4bbf-a6d1-1fa3574f6f9a_tn36.json  3f21a9ed-6d93-46e2-9202-1b3739a94f4f_tr87.json  4bf9914e-033e-4cb6-ad4c-ef5e1bf0b66e_wa30.json  52674915-e7a7-401f-bf3e-ab62b4fc3c0d_ls20.json  5526c8b9-039d-4130-83c8-b31a2b4728ff_wa30.json  58f0d77a-f1e9-4f9f-9201-ef5ecb939f6e_su15.json  (+23 more)
docs/: WRITEUP_OUTLINE.md
prompts/: baseline_action_selector.txt  hypothesis_action.txt  hypothesis_action_v2.txt  hypothesis_action_v3.txt  hypothesis_action_v4.txt  hypothesis_action_v5.txt  memory_distillation.txt  vision_action.txt  vision_autopilot_action.txt  vision_graph_action.txt
results/: OVERNIGHT_LOG.md  cost_report.jsonl
scripts/: aggregate_results.py  backfill_memory.py  reproduce.sh  run_multi_game.py
src/: __init__.py  agent.py  baseline_random.py  claude_client.py  hypothesis.py  memory.py  perception.py  world_graph.py
(+61 files in other folders)
