[project]
name = "arc-agi-3-three-loop"
version = "0.0.1"
description = "Three-loop Claude-orchestrated harness for ARC-AGI-3: falsification + cross-game memory + self-patching prompts"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT-0" }
authors = [{ name = "Carson Dixon" }]
keywords = ["arc-agi", "agents", "harness", "claude", "anthropic"]

dependencies = [
    "anthropic>=0.40.0",
    "arc-agi>=0.9.8",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
memory = [
    "sentence-transformers>=3.0.0",
    "numpy>=2.0.0",
    "scipy>=1.13.0",
]
viz = [
    "matplotlib>=3.9.0",
    "pillow>=10.0.0",
]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "pyright>=1.1.380",
]

[project.urls]
Homepage = "https://github.com/carsondixon/arc-agi-3-three-loop"
Repository = "https://github.com/carsondixon/arc-agi-3-three-loop"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
